--- a/public/index.html
+++ b/public/index.html
@@ -4,12 +4,12 @@
     <meta charset="utf-8">
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
-    <title>Hello, Blockstack</title>
+    <title>D-Vault</title>
   </head>
   <body>
     <nav class="navbar navbar-dark bg-dark navbar-static-top">
-      <a class="navbar-brand" href="https://blockstack.org">
-        <img src="white-logo.svg" alt="">
+      <a class="navbar-brand" href="https://github.com/michaeldai1006/SU-CIS600-project-decentralized-info-safekeeping">
+        <h1>D-Vault</h1>
       </a>
     </nav>
     <noscript>
